--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -48,16 +48,25 @@ $color-sistema-e: #D8ECFF
 $color-sistema-f: #e8e8e8
 $color-sistema-g: #f3f9ff
 $color-sistema-h: #F6F6F6
+$color-sistema-i: #FAE0DA
+$color-sistema-j: #D3F0E0
+$color-sistema-k: #496C58
+$color-sistema-l: #F8F7F4
+$color-sistema-m: #F3FBF6
+$color-sistema-n: #FCF8DE
+$color-sistema-o: #F2EFE9
+$color-sistema-p: #F9F1BE
+$color-sistema-q: #E9F7EF
 
 $color-institucional: #39A900
 
 
 // Colores Curso ---------------------------------------
 
-$color-primario: #522981
-$color-secundario: #7DD3E9
-$color-acento-contenido: #FF4A69
-$color-acento-botones: #FFCD0D
+$color-primario: #F5B2A4
+$color-secundario: #94DAB2
+$color-acento-contenido: #F1DE5F
+$color-acento-botones: #F8A230
 $color-adicional-1: #CDDC39
 $color-adicional-2: #00BCD4
 
@@ -79,7 +88,7 @@ $color-btn-texto: $color-sistema-texto
 
 // Colores banner --------------------------------------
 $color-banner-fondo: $color-primario
-$color-banner-text: $white
+$color-banner-text: $color-sistema-texto
 
 // Colores anexos
 $color-fondo-anexo: $color-sistema-g
