--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -57,6 +57,7 @@ $color-sistema-n: #FCF8DE
 $color-sistema-o: #F2EFE9
 $color-sistema-p: #F9F1BE
 $color-sistema-q: #E9F7EF
+$color-sistema-r: #FCEFEC
 
 $color-institucional: #39A900
 
